Fix for image component center alignment on mobile

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/image/_image.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/image/_image.scss
@@ -34,6 +34,9 @@
             margin: $margin-zero auto;
     }
     }
+    img {
+        width: 100%;
+    }
 }
 // .regular {
 //     @include padding(16px 16px 24px 16px);
